--- a/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
@@ -24,28 +24,28 @@
       <div class="row">
         <div class="col-md-6 col-xs-6">
           <div class="form-group">
-            <label>Pincode : </label>
-            <input ng-model="form.pincode" type="text" class="form-control" placeholder="Pincode...">
+            <label>Country : </label>
+            <input ng-model="form.country" uib-typeahead="c.name as c.name for c in countrySearch($viewValue)" type="text" class="form-control" placeholder="Country..."> 
           </div>
         </div>
         <div class="col-md-6 col-xs-6" >
           <div class="form-group">
-            <label>City : </label>
-            <input ng-model="form.city" type="text" class="form-control" placeholder="City..." disabled>
+            <label>State : </label>
+            <input ng-model="form.state" uib-typeahead="s.name as s.name for s in stateSearch($viewValue)" type="text" class="form-control" placeholder="State..." ng-disabled="!showAddressForm.state">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-xs-6">
           <div class="form-group">
-            <label>State : </label>
-            <input ng-model="form.state" type="text" class="form-control" placeholder="State..." disabled>
+            <label>City : </label>
+            <input ng-model="form.city" uib-typeahead="c.name as c.name for c in citySearch($viewValue)" type="text" class="form-control" placeholder="City..." ng-disabled="!showAddressForm.city">
           </div>
         </div>
         <div class="col-md-6 col-xs-6">
           <div class="form-group">
-            <label>Country : </label>
-            <input ng-model="form.country" type="text" class="form-control">
+            <label>Pincode : </label>
+            <input ng-model="form.pincode" type="text" class="form-control" placeholder="Pincode...">
           </div>
         </div>
       </div>
