--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -40,6 +40,8 @@
     </div>
   </div>
   <div class="col-md-9">
+    <wizard steps="projectSteps.steps" editable="false" active="form.selectedStatus" error="false"></wizard>
+    <hr>
     <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
     <table class="invoiceTable" style=" width: 100%;">
       <tbody>
