--- a/support/static/ngTemplates/app.projects.html
+++ b/support/static/ngTemplates/app.projects.html
@@ -19,6 +19,15 @@
             <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
           </div>
         </uib-tab>
+        <uib-tab>
+          <uib-tab-heading>
+            Archieve
+            <i class="fa fa-list-ul"></i>
+          </uib-tab-heading>
+          <div class="container-fluid">
+            <generic-Table data="data.archieveData" config-Obj="{{archieveConfig}}" callback-Fn="tableActionArchieve"></generic-Table>
+          </div>
+        </uib-tab>
         <uib-tab >
           <uib-tab-heading>
             Pending Approval
@@ -54,6 +63,9 @@
           </uib-tab-heading>
           <div ng-if="tab.app == 'projectEditor'">
             <div ng-include="'/static/ngTemplates/app.projects.form.html'"></div>
+          </div>
+          <div ng-if="tab.app == 'projectarchieveDetails'">
+            <div ng-include="'/static/ngTemplates/app.projects.archieve.explore.html'"></div>
           </div>
           <div ng-if="tab.app == 'projectDetails'">
             <div ng-include="'/static/ngTemplates/app.projects.service.view.html'"></div>
