--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -1,100 +1,250 @@
 <div class="container-fluid" style="padding:20px;" ng-controller="businessManagement.projects.service.view">
-  <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="row">
-          <div class="col-md-12 text-left">
-            <label> Project Title : </label> {{form.title}} <br />
-            <label> Service Name :</label> {{form.service.name}} <br />
-            <label>Closing Date : </label> {{form.date}} <br />
+  <div class="row">
+    <div class="col-md-3" style="border-right:solid 2px #eeeeee;">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12 text-left">
+              <label> Project Title : </label> {{form.title}} <br />
+              <label> Service Name :</label> {{form.service.name}} <br />
+              <label>Closing Date : </label> {{form.date}} <br />
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <label> Responsible Persons : </label>
-          </div>
-          <div class="col-md-12">
-            <div ng-repeat="r in form.responsible">
-              <div class="card container-fluid" style="padding-left:0px;position:relative;margin-top:10px">
-                <div class="col-md-4" style="padding-top:5px;">
-                  <img ng-src="{{r | getDP}}" class="img-circle" alt="DP" height="50" width="50" />
-                </div>
-                <div class="col-md-8">
-                  {{r | getName}} <br>
-                  ID : <strong>{{r}}</strong>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <label> Responsible Persons : </label>
+            </div>
+            <div class="col-md-12">
+              <div ng-repeat="r in form.responsible">
+                <div class="card container-fluid" style="padding-left:0px;position:relative;margin-top:10px">
+                  <div class="col-md-4" style="padding-top:5px;">
+                    <img ng-src="{{r | getDP}}" class="img-circle" alt="DP" height="50" width="50" />
+                  </div>
+                  <div class="col-md-8">
+                    {{r | getName}} <br>
+                    ID : <strong>{{r}}</strong>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row" style="padding-top:10px">
-          <div class="col-md-12 text-center">
-            <label> Revision : </label>
+          <div class="row" style="padding-top:10px">
+            <div class="col-md-12 text-center">
+              <label> Revision : </label>
+            </div>
+            <div class="col-md-12">
+              <input type="text" class="form-control text-center" ng-model="form.revision" ng-change="revision()" placeholder="Revision">
+            </div>
           </div>
-          <div class="col-md-12">
-            <input type="text" class="form-control text-center" ng-model="form.revision" ng-change="revision()" placeholder="Revision">
-          </div>
-        </div>
 
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col-md-9">
-    <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
-    <table class="invoiceTable" style=" width: 100%;">
-      <tbody>
-        <tr style="background-color: #eeeeee;height: 96px;">
-          <th>S.No</th>
-          <th>Part No</th>
-          <th>Products</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <th></th>
-        </tr>
-        <tr ng-repeat="v in projects track by $index">
-          <td>{{$index + 1}}</td>
-          <td>{{v.products.part_no}}</td>
-          <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> &nbsp;({{v.products.description_2}})</span></td>
-          <td> <input class="form-control-pos text-center" ng-model="v.price"></td>
-          <td><input type="text" class="form-control-pos text-center" ng-model="v.quantity1"></td>
+    <div class="col-md-9">
 
-
-
-          <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td>
-        </tr>
-        <tr ng-repeat="item in data track by $index">
-          <td>{{$index + 1 + projects.length}}</td>
-          <td><input ng-model="item.part_no" uib-typeahead="product as product.part_no for product in change($viewValue) " type="text" class="form-control-pos text-center"></td>
-          <td>
-            <!-- <input  class="form-control-pos text-center" ng-model="item.description_1"> -->
-            {{item.description_1}}<span ng-if="item.description_2"> &nbsp;({{item.description_2}})</span>
-          </td>
-          <td>
-            <input class="form-control-pos text-center" ng-model="item.price">
-          </td>
-          <td>
-            <input type="text" class="form-control-pos text-center" ng-model="item.quantity1">
-          </td>
-          <td>
-            <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable(item.part_no,$index)"> <i class="fa fa-trash"></i> </button>
-          </td>
-        </tr>
-        <tr>
-          <td><button style="background-color:white;border:none;" ng-click="addTableRow($index)"><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="row" ng-if="showbutton||projects.length>0">
-      <div class="col-md-11">
-        <button type="button" class="btn btn-success pull-right"  mwl-confirm title="Confirm" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
-          confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
+      <div class="row" style="padding-top:20px">
+        <div class="col-md-4 text-center">
+          <label> Invoice Value: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.invoiceValue">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.invoiceValueINR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.invoiceValuePer">
+        </div>
       </div>
-      <!-- <div class="col-md-1">
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Packing: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.packing">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.packingINR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.packingPer">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Insurance: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.insurance">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.insuranceINR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.insurancePer">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Freight: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.freight">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.freightINR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.freightPer">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Assessable Value: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.assessableValue">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.assessableValueINR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.assessableValuePer">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> GST: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.gst1">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.gst1INR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.gst1Per">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> GST: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.gst2">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.gst2INR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.gst2Per">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Clearing Charges 1: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.clearingCharges1">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.clearingCharges1INR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.clearingCharges1Per">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Clearing Charges 2: </label>
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.clearingCharges2">
+        </div>
+        <div class="col-md-3">
+          <input type="number" class="form-control text-center" ng-model="form.clearingCharges2INR">
+        </div>
+        <div class="col-md-2">
+          <input type="number" class="form-control text-center" ng-model="form.clearingCharges2Per">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-4 text-center">
+          <label> Ex Rate: </label>
+        </div>
+        <div class="col-md-6">
+          <input type="number" class="form-control text-center" ng-model="form.exrate">
+        </div>
+
+      </div>
+
+      <div class="row" style="padding-top:10px">
+
+        <div class="col-md-12 text-right">
+          <button type="button" class="btn btn-primary btn-sm" ng-click="saveInfo()"> Save </button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="row" style="padding-top:20px">
+    <div class="col-md-12">
+      <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
+      <table class="invoiceTable" style=" width: 100%;">
+        <tbody>
+          <tr style="background-color: #eeeeee;height: 96px;">
+            <th>S.No</th>
+            <th>Part No</th>
+            <th>Products</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th></th>
+          </tr>
+          <tr ng-repeat="v in projects track by $index">
+            <td>{{$index + 1}}</td>
+            <td>{{v.products.part_no}}</td>
+            <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> &nbsp;({{v.products.description_2}})</span></td>
+            <td> <input class="form-control-pos text-center" ng-model="v.price"></td>
+            <td><input type="text" class="form-control-pos text-center" ng-model="v.quantity1"></td>
+
+
+
+            <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td>
+          </tr>
+          <tr ng-repeat="item in data track by $index">
+            <td>{{$index + 1 + projects.length}}</td>
+            <td><input ng-model="item.part_no" uib-typeahead="product as product.part_no for product in change($viewValue) " type="text" class="form-control-pos text-center"></td>
+            <td>
+              <!-- <input  class="form-control-pos text-center" ng-model="item.description_1"> -->
+              {{item.description_1}}<span ng-if="item.description_2"> &nbsp;({{item.description_2}})</span>
+            </td>
+            <td>
+              <input class="form-control-pos text-center" ng-model="item.price">
+            </td>
+            <td>
+              <input type="text" class="form-control-pos text-center" ng-model="item.quantity1">
+            </td>
+            <td>
+              <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable(item.part_no,$index)"> <i class="fa fa-trash"></i> </button>
+            </td>
+          </tr>
+          <tr>
+            <td><button style="background-color:white;border:none;" ng-click="addTableRow($index)"><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row" ng-if="showbutton||projects.length>0">
+        <div class="col-md-11">
+          <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
+            confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
+        </div>
+        <!-- <div class="col-md-1">
         <span><a class="btn btn-primary pull-right" style="cursor:pointer;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
       </div>
       <div class="col-md-2">
         <span><a class="btn btn-primary " style="cursor:pointer;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
       </div> -->
+      </div>
     </div>
   </div>
 </div>
