--- a/marketing/static/ngTemplates/app.marketing.contacts.item.html
+++ b/marketing/static/ngTemplates/app.marketing.contacts.item.html
@@ -1,26 +1,34 @@
 <div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
-  <div class="container-fluid card" style="padding:15px 5px;">
-    <div class="row">
-      <div class="col-md-5" align="right">
-        <strong>Name :</strong>
-      </div>
-      <div class="col-md-7">
-        {{data.name ? data.name : 'None'}}
-      </div>
-    </div>
+  <div class="container-fluid card" style="padding:15px 5px;border-radius:30px">
     <div class="row">
       <div class="col-md-5" align="right">
         <strong>Email :</strong>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-7" style="padding-left:0px">
         {{data.email ? data.email : 'None'}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-5" align="right">
+        <strong>Source :</strong>
+      </div>
+      <div class="col-md-7" style="padding-left:0px">
+        {{data.source ? data.source : 'None'}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-5" align="right">
+        <strong>Name :</strong>
+      </div>
+      <div class="col-md-7" style="padding-left:0px">
+        {{data.name ? data.name : 'None'}}
       </div>
     </div>
     <div class="row">
       <div class="col-md-5" align="right">
         <strong>Mobile :</strong>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-7" style="padding-left:0px">
         {{data.mobile ? data.mobile : 'None'}}
       </div>
     </div>
@@ -28,23 +36,15 @@
       <div class="col-md-5" align="right">
         <strong>Reference ID :</strong>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-7" style="padding-left:0px">
         {{data.referenceId ? data.referenceId : 'None'}}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-5" align="right">
-        <strong>Source :</strong>
-      </div>
-      <div class="col-md-7">
-        {{data.source ? data.source : 'None'}}
       </div>
     </div>
     <div class="row">
       <div class="col-md-5" align="right">
         <strong>PinCode :</strong>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-7" style="padding-left:0px">
         {{data.pinCode ? data.pinCode : 'None'}}
       </div>
     </div>
