--- a/marketing/static/ngTemplates/app.marketing.presentations.html
+++ b/marketing/static/ngTemplates/app.marketing.presentations.html
@@ -59,7 +59,7 @@
               </span>
               <span ng-if="dateFlags[w*7 + d]=='Cur'">
                 <!-- <span ng-if="scheduleData[dates[w*7 + d]].length==0" style="top:40%;right:35%;position:absolute;font-size:20px;color:#8f8f8f">No Demo</span> -->
-                <span ng-if="scheduleData[dates[w*7 + d]].length>0" style="top:40%;right:35%;position:absolute;font-size:20px;color:#2b6cdb">{{scheduleData[dates[w*7 + d]].length}} {{scheduleData[dates[w*7 + d]].length>1?'Demos':'Demo'}}</span>
+                <span ng-if="scheduleData[dates[w*7 + d]].length>0" style="top:40%;right:35%;position:absolute;font-size:20px;color:#2b6cdb"><i class="fa fa-laptop fa-lg" ></i> {{scheduleData[dates[w*7 + d]].length}}</span>
               </span>
             </td>
           </tr>
