--- a/marketing/static/ngTemplates/app.marketing.contact.logDetailsPopup.html
+++ b/marketing/static/ngTemplates/app.marketing.contact.logDetailsPopup.html
@@ -1,27 +1,24 @@
-<div class="modal-header">
-  <h1 class="text-center"><i class="fa fa-user"></i> {{contactData.name ? contactData.name : 'None'}}</h1>
+<div class="modal-header" style="font-size:25px">
+  <div class="col-md-6">
+    <span><i class="fa fa-envelope-o fa-lg"></i> &nbsp;{{contactData.email}}</span>
+  </div>
+  <div class="col-md-6 text-right">
+    <span><i class="fa fa-globe fa-lg"></i> &nbsp;{{contactData.source}}</span>
+  </div>
 </div>
 <div class="modal-body">
-  <div class="row" style="padding:10px 30px">
+  <div class="row" style="padding:10px 30px;font-size:20px">
     <div class="col-md-6">
-      <span style="font-size:25px" ng-if="contactData.email != 'null'"><i class="fa fa-envelope-o"></i> &nbsp;{{contactData.email}} <br></span>
-      <span style="font-size:25px" ng-if="contactData.mobile != 'null'"> <i class="fa fa-mobile"></i> &nbsp;{{contactData.mobile}} <br></span>
+      <span><i class="fa fa-user fa-lg"></i> &nbsp;{{contactData.name ? contactData.name : 'None'}} <br></span>
+      <span> <i class="fa fa-mobile fa-lg"></i> &nbsp;{{contactData.mobile ? contactData.mobile : 'None'}} <br></span>
     </div>
-    <div class="col-md-6" style="font-size:18px">
+    <div class="col-md-6">
       <div class="row">
         <div class="col-md-5" align="right">
           <strong>Reference ID :</strong>
         </div>
         <div class="col-md-7">
           {{contactData.referenceId ? contactData.referenceId : 'None'}}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-5" align="right">
-          <strong>Source :</strong>
-        </div>
-        <div class="col-md-7">
-          {{contactData.source ? contactData.source : 'None'}}
         </div>
       </div>
       <div class="row">
@@ -37,7 +34,7 @@
   <hr>
   <div class="row">
     <div class="col-md-4" style="border-right:2px solid #eeeeee">
-      <h3 align="center" style="padding-bottom:20px">Logs</h3>
+      <h4 align="center" style="padding-bottom:20px">Logs</h4>
       <div class="container-fluid card" ng-repeat="log in contactData.logData" style="padding:1px;margin:10px">
         <div class="col-md-3" style="padding-left:0px">
           <img ng-src="{{log.user | getDP}}" class="img img-rounded" style="height:35px;width:35px">
@@ -56,7 +53,7 @@
       </div>
     </div>
     <div class="col-md-8">
-      <h3 align="center" style="padding-bottom:20px">Comments</h3>
+      <h4 align="center" style="padding-bottom:20px">Comments</h4>
 
       <div class="container-fluid card" ng-repeat="log in contactData.logData" style="padding:1px;margin:10px 5px;" ng-if="log.typ=='comment'">
         <div class="col-md-1" style="padding-left:0px">
@@ -70,8 +67,8 @@
         </div>
       </div>
       </div>
-      <div class="row pull-right" style="padding:15px;position:fixed;bottom:1px;right:15px">
-        <div class="btn btn-primary" ng-click="close()">
+      <div class="row pull-right" style="position:absolute;bottom:5px;right:20px">
+        <div class="btn btn-primary btn-sm" ng-click="close()">
           <h4>Close</h4>
         </div>
       </div>
