--- a/marketing/static/ngTemplates/app.marketing.leads.item.html
+++ b/marketing/static/ngTemplates/app.marketing.leads.item.html
@@ -1,5 +1,5 @@
 <div class="col-md-6" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
-  <div class="container-fluid card" style="padding:15px 5px;height:235px">
+  <div class="container-fluid card" style="padding:15px 5px;height:235px;border-radius:25px 25px 0px">
     <div class="row" style="font-size:18px">
       <div class="col-md-12">
         <div class="col-md-4" style="padding-right:0px">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <div class="row" style="position:absolute;bottom:16px;right:0px">
+    <div class="row" style="position:absolute;bottom:17px;right:2px">
       <div class="col-md-12">
         <div class="btn-group btn-sm pull-right">
           <button type="button" class="btn btn-danger" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default">
