--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
@@ -48,7 +48,7 @@
           </div>
           <div class="col-md-8">
             <div class="form-group">
-              <button type="button" class="btn btn-default" ng-click="generateManfestForAll()">Generate Manifest</button>
+              <button type="button" class="btn btn-primary" mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="generateManfestForAll()" confirm-button-type="default" cancel-button-type="default">Generate Manifest </button>
               <p class="help-block">Generate Manifest for selected orders</p>
             </div>
           </div>
