social mobile login

--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -8,7 +8,9 @@
         </ol>
       </nav>
     </div>
-
+    <button type="button" class="btn btn-default" ng-click="call()">
+      callllllllllll
+    </button>
 
     <div class="row hidden-md hidden-lg" style="margin:35px 0px 0px 0px">
       <nav aria-label="breadcrumb">
