--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -759,6 +759,31 @@
           <div ng-if="!getShippingCharges" class="text-center" style="padding-top:60px">
             <img src="static/images/lg.dual-ring-loader.gif" alt="">
           </div>
+          <div class="row" ng-if="getShippingCharges">
+            <div class="col-xs-12" style="padding:0px 60px;">
+              <div class="col-md-3 col-xs-12" ng-repeat="c in cartItems" style="margin-top:15px;">
+                <div class="card">
+                  <img style="width: 100%; height:150px;" class="img" ng-src="{{c.product.files[0].attachment}}">
+                  <div class="row" style="height:60px; padding:0px 10px">
+                    <div class="col-xs-8" style="padding-right:5px;">
+                      <p style="margin:0px">{{c.product.product.name}}</p>
+                    </div>
+                    <div class="col-xs-4"style="padding-left:5px;">
+
+                      <div ng-if="c.prodSku==c.product.product.serialNo">
+                        <i class="fa {{currency}}"></i> {{c.product.product.discountedPrice.toFixed(2)}}</span>
+                      </div>
+                      <div ng-if="c.prodSku!=c.product.product.serialNo">
+                        <i class="fa {{currency}}"></i> {{c.prod_var.discountedPrice.toFixed(2)}}</span>
+                      </div>
+
+                      <p style="margin:0px;">Qty:<span style="margin-left:5px;">{{c.qty}}</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
         <div ng-if="data.stage == 'processing'">
