--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -52,9 +52,10 @@
   <div class="col-xs-2 hidden-md hidden-lg" style="padding:7px;" ng-if="topIcon">
     <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="">
   </div>
-  <!-- <div class="col-xs-2 text-center hidden-xs hidden-sm" style="padding-top:2px;font-size:28px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon">
+
+  <div class="col-xs-2 hidden-md hidden-lg" style="padding-top:2px;font-size:28px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon">
     <i ng-click="$state.go('ecommerce')" class="fa fa-home" aria-hidden="true"></i>
-  </div> -->
+  </div>
 
 
   <div style="" class="hidden-xs hidden-sm">
