--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -69,7 +69,7 @@
               <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
             </div>
 
-            <div class="col-md-4" style="margin-bottom:20px; padding-left:10px;padding-right:10px;" ng-repeat="data in reviewData | reverse" ng-click="tableAction(reviewData.length-1-$index)">
+            <div ng-if="!loadingData" class="col-md-4" style="margin-bottom:20px; padding-left:10px;padding-right:10px;" ng-repeat="data in reviewData | reverse" ng-click="tableAction(reviewData.length-1-$index)">
               <!-- {{data[0].numOfComments}} {{data[0].statusChat}} -->
               <div class="container-fluid card" style="padding-bottom:0px">
                 <div class="row container-fluid" style="border-bottom: 1px solid #dedede; height:170px; opacity:0.9;letter-spacing:0.6px; {{data[0].user_id==null ? 'background-color: #fc000033':''}}; {{data[0].statusChat=='closed'?'background-color: #16e61133':'' }}">
